--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && nodemon --exec ts-node dist/server.js",
+    "start": "tsc && nodemon --exec ts-node dist/server.js & prisma migrate deploy && prisma studio",
     "build": "tsc",
-    "dev": "node dist/server.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
