--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && nodemon --exec ts-node dist/server.js & prisma migrate deploy && prisma studio",
+    "start": "rm -rf dist && tsc && node dist/index.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "prisma:studio": "prisma studio",
@@ -18,6 +18,8 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "@types/cors": "^2.8.17",
+    "@types/mongodb": "^4.0.6",
+    "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -26,6 +28,8 @@
     "express": "^4.21.2",
     "firebase": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.11.0",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
     "tsconfig-paths": "^4.2.0",
