--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^8.11.0",
     "pg": "^8.13.1",
     "prisma": "^6.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
   },
