--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "rm -rf dist && tsc && node dist/index.js",
+    "dev": "nodemon --exec ts-node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
