updated db name

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec ts-node dist/index.js",
+    "dev": "rm -rf dist && tsc && node dist/index.js",
     "start": "node dist/index.js",
     "build": "tsc",
     "prisma:studio": "prisma studio",
